tests/negative/Test3.sp
(* Testing function without return type *)

main(){

}